--- a/index.html
+++ b/index.html
@@ -1,3 +1,33 @@
-<html>
-    <p>lololo</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>basic materials</title>
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+
+    <script>
+        function copyLink() {
+          navigator.clipboard.writeText('contact@basicmaterials.studio');
+        }
+    </script>
+</head>
+
+<body>
+    <div class="materials-container">
+        <div class="header">
+            <img class="logo" src="./assets/logo.png" alt="basic materials">
+            <h3>website in progress</h3>
+        </div>
+        <div class="opacity"></div>
+        <img class="background" src="./assets/background.jpg">
+        <div class="footer">
+            <a onclick="copyLink()">contact@basicmaterials.studio</a>
+            <a href="https://www.instagram.com/basicmaterials.studio/?utm_source=ig_web_button_share_sheet">@basicmaterials.studio</a>
+        </div>
+    </div>
+</body>
+
 </html>
